kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lb-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: telegrammy.tech
    http:
      paths:
      - path: /api/
        pathType: Prefix
        backend:
          service:
            name: telegrammy-backend-service
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: telegrammy-frontend-service
            port:
              number: 80
